--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,12 @@ body {
 
 .hero-banner-img {
   position: absolute;
-  right: 40px;
+  right: 30px;
   top: 0px;
-  width: 700px;
+  width: 600px;
   height: 900px;
   margin-top: -330px;
-
+  border-bottom-left-radius: 40%;
 }
 
 .exercise-card {
